--- a/package.json
+++ b/package.json
@@ -6,20 +6,27 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@nivo/bar": "^0.67.0",
+    "@nivo/core": "^0.67.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.0",
+    "add": "^2.0.6",
     "bootstrap": "4.6.0",
+    "chart.js": "^2.9.4",
     "node-sass": "5.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.0",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.3",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
+    "react-vis": "^1.11.7",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.0",
+    "yarn": "^1.22.10"
   },
   "scripts": {
     "start": "react-scripts start",
