--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
     "bootstrap": "4.6.0",
     "chart.js": "^2.9.4",
     "node-sass": "5.0.0",
-    "react": "^17.0.1",
-    "react-bootstrap": "^1.5.0",
-    "react-chartjs-2": "^2.11.1",
-    "react-dom": "^17.0.1",
-    "react-redux": "^7.2.3",
-    "react-router-dom": "5.2.0",
-    "react-scripts": "4.0.3",
+    "react": "^17.0.2",
+    "react-bootstrap": "^1.6.5",
+    "react-chartjs-2": "^2.11.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.8",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.3",
     "react-vis": "^1.11.7",
-    "redux": "^4.0.5",
+    "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "web-vitals": "^1.1.0",
     "yarn": "^1.22.10"
